--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "start": "vite preview"
+    "start": "vite"
   },
   "dependencies": {
     "axios": "^1.6.5",
@@ -28,7 +28,7 @@
     "vite": "^4.4.0"
   },
   "engines": {
-    "node": "18.x",
+    "node": "20.x",
     "npm": "9.x"
   }
 }
